add the "send panel" which sends XML RPC messages, as well as a small Python server to receive and display them